@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
-Changelog for smp_utils-0.94 [20081229] [svn:r38]
+Changelog for smp_utils-0.94 [20081229] [svn:r39]
   - smp_discover: sync to sas2r15
   - smp_discover_list: sync to sas2r15
   - smp_rep_general: sync to sas2r15
@@ -11,6 +11,7 @@ Changelog for smp_utils-0.94 [20081229] [svn:r38]
   - sgv4: more detail in error messages
   - sgv4: drop scsi.h include, gives problems with lk 2.6.27
   - mpt: allow either /dev/mptctl or /dev/mpt2ctl [10;220-221]
+    - warn if target SAS address is 0x00000000 when -v given
 
 Changelog for smp_utils-0.93 [20080106] [svn:r7]
   - sgv4: add new interface
